--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=3000
 MONGODB_URI=mongodb://localhost:27017/blockchain
+# MONGODB_URI=mongodb+srv://admin:123456aA@cluster0.4uqfd.mongodb.net/blockchain
 JWT_SECRET=your_secret_key_here
